fixing some bugs

--- a/ClothesPrice/Clothes-price-prediction.ipynb
+++ b/ClothesPrice/Clothes-price-prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestRegressor, AdaBoostRegressor, GradientBoostingRegressor\n",
     "from sklearn.svm import SVR\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.metrics import mean_squared_error, r2_score , mean_absolute_error\n",
     "from xgboost import XGBRegressor\n",
     "from lightgbm import LGBMRegressor\n",
     "from catboost import CatBoostRegressor\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,6 +70,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>ID</th>\n",
        "      <th>marka</th>\n",
        "      <th>naw3</th>\n",
        "      <th>9at3a</th>\n",
@@ -84,10 +85,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Bey&amp;Bey</td>\n",
+       "      <td>mta3 a3res</td>\n",
+       "      <td>kabbout</td>\n",
+       "      <td>1.081667</td>\n",
+       "      <td>22.4</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>98</td>\n",
+       "      <td>18</td>\n",
+       "      <td>21</td>\n",
+       "      <td>49.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>HA</td>\n",
        "      <td>confy</td>\n",
-       "      <td>Shoes</td>\n",
+       "      <td>sabbat</td>\n",
        "      <td>1.038333</td>\n",
        "      <td>46.4</td>\n",
        "      <td>54.0</td>\n",
@@ -98,9 +114,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Zen</td>\n",
        "      <td>confy</td>\n",
-       "      <td>Shirt</td>\n",
+       "      <td>maryoul</td>\n",
        "      <td>1.021667</td>\n",
        "      <td>40.8</td>\n",
        "      <td>54.0</td>\n",
@@ -111,9 +128,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Bey&amp;Bey</td>\n",
        "      <td>confy</td>\n",
-       "      <td>Shirt</td>\n",
+       "      <td>maryoul</td>\n",
        "      <td>1.065000</td>\n",
        "      <td>24.8</td>\n",
        "      <td>56.0</td>\n",
@@ -124,9 +142,10 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Armani</td>\n",
        "      <td>classy</td>\n",
-       "      <td>Jacket</td>\n",
+       "      <td>kabbout</td>\n",
        "      <td>1.041667</td>\n",
        "      <td>72.0</td>\n",
        "      <td>61.0</td>\n",
@@ -135,33 +154,20 @@
        "      <td>30</td>\n",
        "      <td>345.9</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Armani</td>\n",
-       "      <td>sport</td>\n",
-       "      <td>Shirt</td>\n",
-       "      <td>1.038333</td>\n",
-       "      <td>81.6</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>151</td>\n",
-       "      <td>27</td>\n",
-       "      <td>32</td>\n",
-       "      <td>463.3</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     marka    naw3   9at3a    khochn  toul  3ordh    R   G   B   soum\n",
-       "1       HA   confy   Shoes  1.038333  46.4   54.0  128  23  27  180.9\n",
-       "2      Zen   confy   Shirt  1.021667  40.8   54.0  121  22  25  143.8\n",
-       "3  Bey&Bey   confy   Shirt  1.065000  24.8   56.0  101  18  21   54.4\n",
-       "4   Armani  classy  Jacket  1.041667  72.0   61.0  146  26  30  345.9\n",
-       "5   Armani   sport   Shirt  1.038333  81.6   59.0  151  27  32  463.3"
+       "   ID    marka        naw3    9at3a    khochn  toul  3ordh    R   G   B   soum\n",
+       "0   0  Bey&Bey  mta3 a3res  kabbout  1.081667  22.4   57.0   98  18  21   49.2\n",
+       "1   1       HA       confy   sabbat  1.038333  46.4   54.0  128  23  27  180.9\n",
+       "2   2      Zen       confy  maryoul  1.021667  40.8   54.0  121  22  25  143.8\n",
+       "3   3  Bey&Bey       confy  maryoul  1.065000  24.8   56.0  101  18  21   54.4\n",
+       "4   4   Armani      classy  kabbout  1.041667  72.0   61.0  146  26  30  345.9"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,16 +205,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Shoes', 'Shirt', 'Jacket', 'T_shirt', 'Pants'], dtype=object)"
+       "array(['Jacket', 'Shoes', 'Shirt', 'T_shirt', 'Pants'], dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -590,8 +596,9 @@
       "ridge trained\n",
       "xgboost trained\n",
       "catboost trained\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.001853 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.001217 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 658\n",
       "[LightGBM] [Info] Number of data points in the train set: 35686, number of used features: 23\n",
       "[LightGBM] [Info] Start training from score 409.089332\n",
@@ -607,24 +614,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ridge 0.9340987759654636\n",
-      "xgboost 0.9800600349212047\n",
-      "catboost 0.9818340081940078\n",
-      "lightgbm 0.981493603663101\n"
+      "ridge  r2_score 0.9340987759654636\n",
+      "ridge  RMSE 101.80292049201694\n",
+      "ridge  MAE 69.71960702004243\n",
+      "xgboost  r2_score 0.9800600349212047\n",
+      "xgboost  RMSE 55.99840964370866\n",
+      "xgboost  MAE 29.49223589701547\n",
+      "catboost  r2_score 0.9818340081940078\n",
+      "catboost  RMSE 53.44942696780701\n",
+      "catboost  MAE 28.71945894951966\n",
+      "lightgbm  r2_score 0.981493603663101\n",
+      "lightgbm  RMSE 53.94788535968604\n",
+      "lightgbm  MAE 29.18937245351777\n"
      ]
     }
    ],
    "source": [
     "for name, model1 in models.items():\n",
     "    predictions = model1.predict(X_test)\n",
-    "    print(name , r2_score(y_test,predictions))"
+    "    print(name , \" r2_score\", r2_score(y_test,predictions))\n",
+    "    print(name , \" RMSE\", np.sqrt(mean_squared_error(y_test,predictions)))\n",
+    "    print(name , \" MAE\", mean_absolute_error(y_test,predictions))"
    ]
   },
   {
@@ -646,6 +663,31 @@
    "source": [
     "# dump(models[\"catboost\"],\"Catboost.joblib\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2910.3743347818277"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
