--- a/JewelleryClassification/TrainAndTest.ipynb
+++ b/JewelleryClassification/TrainAndTest.ipynb
@@ -151,7 +151,7 @@
     "images = []\n",
     "labels = []\n",
     "\n",
-    "for filename in os.listdir(\"Train/earring\"):\n",
+    "for filename in os.listdir(\"Train/Jewellery/earring\"):\n",
     "    if filename.endswith('.jpg') or filename.endswith(\"png\") or filename.endswith(\"jpeg\"):\n",
     "        # load and preprocess the image\n",
     "        img = tf.keras.preprocessing.image.load_img(os.path.join(\"Train/earring\", filename), target_size=target_size)\n",
@@ -161,7 +161,7 @@
     "       # add the preprocessed image to the list of images\n",
     "        images.append(img_array)\n",
     "        labels.append(0)\n",
-    "for filename in os.listdir(\"Train/necklace\"):\n",
+    "for filename in os.listdir(\"Train/Jewellery/necklace\"):\n",
     "    if filename.endswith('.jpg') or filename.endswith(\"png\") or filename.endswith(\"jpeg\"):\n",
     "        # load and preprocess the image\n",
     "        img = tf.keras.preprocessing.image.load_img(os.path.join(\"Train/necklace\", filename), target_size=target_size)\n",
@@ -171,7 +171,7 @@
     "       # add the preprocessed image to the list of images\n",
     "        images.append(img_array)\n",
     "        labels.append(1)\n",
-    "for filename in os.listdir(\"Train/ring\"):\n",
+    "for filename in os.listdir(\"Train/Jewellery/ring\"):\n",
     "    if filename.endswith('.jpg') or filename.endswith(\"png\") or filename.endswith(\"jpeg\"):\n",
     "        # load and preprocess the image\n",
     "        img = tf.keras.preprocessing.image.load_img(os.path.join(\"Train/ring\", filename), target_size=target_size)\n",
@@ -255,7 +255,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Train/Jewellery\\\\earring',\n",
+       " 'Train/Jewellery\\\\necklace',\n",
+       " 'Train/Jewellery\\\\ring']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_Path = \"Train/Jewellery\"\n",
+    "IMAGE_SIZE = (224,224)\n",
+    "folders = glob.glob(train_Path + '/*')\n",
+    "folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = [\"earring\",\"necklace\",\"ring\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 307 images belonging to 3 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "test_Path = \"Test/Jewellery\"\n",
+    "test_set = test_datagen.flow_from_directory(\n",
+    "    test_Path,  # Use your test data directory here\n",
+    "    target_size=IMAGE_SIZE,\n",
+    "    batch_size=32,\n",
+    "    class_mode='categorical',\n",
+    "    shuffle= False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ghass\\anaconda3\\envs\\yolo\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:396: UserWarning: Skipping variable loading for optimizer 'adam', because it has 326 variables whereas the saved optimizer has 14 variables. \n",
+      "  trackable.load_own_variables(weights_store.get(inner_path))\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = tf.keras.models.load_model(\"JewelleryModelV1.keras\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -263,291 +340,42 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\ghass\\anaconda3\\envs\\yolo\\Lib\\site-packages\\PIL\\Image.py:981: UserWarning: Palette images with Transparency expressed in bytes should be converted to RGBA images\n",
-      "  warnings.warn(\n"
+      "  warnings.warn(\n",
+      "c:\\Users\\ghass\\anaconda3\\envs\\yolo\\Lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:120: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+      "  self._warn_if_super_not_called()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 698ms/step\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     earring       1.00      0.95      0.98       188\n",
+      "    necklace       0.96      0.99      0.97        67\n",
+      "        ring       0.88      1.00      0.94        52\n",
+      "\n",
+      "    accuracy                           0.97       307\n",
+      "   macro avg       0.95      0.98      0.96       307\n",
+      "weighted avg       0.97      0.97      0.97       307\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# define the directory containing training images\n",
-    "target_size = (224, 224)\n",
+    "test_labels = test_set.classes\n",
     "\n",
-    "# initialize lists to store images and labels\n",
-    "images = []\n",
-    "labels = []\n",
+    "# Predict the labels for the test set\n",
+    "predictions = model.predict(test_set, steps=len(test_set))\n",
+    "predicted_classes = np.argmax(predictions, axis=1)\n",
     "\n",
-    "for filename in os.listdir(\"Test/earring\"):\n",
-    "    if filename.endswith('.jpg') or filename.endswith(\"png\") or filename.endswith(\"jpeg\"):\n",
-    "        # load and preprocess the image\n",
-    "        img = tf.keras.preprocessing.image.load_img(os.path.join(\"Test/earring\", filename), target_size=target_size)\n",
-    "        img_array = tf.keras.preprocessing.image.img_to_array(img)\n",
-    "        img_array = tf.keras.applications.mobilenet_v2.preprocess_input(img_array)\n",
-    "        \n",
-    "       # add the preprocessed image to the list of images\n",
-    "        images.append(img_array)\n",
-    "        labels.append(0)\n",
-    "for filename in os.listdir(\"Test/necklace\"):\n",
-    "    if filename.endswith('.jpg') or filename.endswith(\"png\"):\n",
-    "        # load and preprocess the image\n",
-    "        img = tf.keras.preprocessing.image.load_img(os.path.join(\"Test/necklace\", filename), target_size=target_size)\n",
-    "        img_array = tf.keras.preprocessing.image.img_to_array(img)\n",
-    "        img_array = tf.keras.applications.mobilenet_v2.preprocess_input(img_array)\n",
-    "        \n",
-    "       # add the preprocessed image to the list of images\n",
-    "        images.append(img_array)\n",
-    "        labels.append(1)\n",
-    "for filename in os.listdir(\"Test/ring\"):\n",
-    "    if filename.endswith('.jpg') or filename.endswith(\"png\"):\n",
-    "        # load and preprocess the image\n",
-    "        img = tf.keras.preprocessing.image.load_img(os.path.join(\"Test/ring\", filename), target_size=target_size)\n",
-    "        img_array = tf.keras.preprocessing.image.img_to_array(img)\n",
-    "        img_array = tf.keras.applications.mobilenet_v2.preprocess_input(img_array)\n",
-    "        \n",
-    "       # add the preprocessed image to the list of images\n",
-    "        images.append(img_array)\n",
-    "        labels.append(2)\n",
-    "        \n",
-    "# convert lists to numpy arrays\n",
-    "X_test = np.array(images)\n",
-    "Y_test = np.array(labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(307, 224, 224, 3)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(307,)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Y_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m10/10\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 570ms/step\n"
-     ]
-    }
-   ],
-   "source": [
-    "predictions_array = model.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions = np.argmax(predictions_array,axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(307,)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.9837133\n"
-     ]
-    }
-   ],
-   "source": [
-    "accuracy_metric = tf.keras.metrics.Accuracy()\n",
-    "accuracy_metric.update_state(Y_test,predictions)\n",
-    "accuracy = accuracy_metric.result().numpy()\n",
-    "print(\"Accuracy:\", accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.9787234\n"
-     ]
-    }
-   ],
-   "source": [
-    "#earring\n",
-    "accuracy_metric = tf.keras.metrics.Accuracy()\n",
-    "accuracy_metric.update_state(Y_test[:188],predictions[:188])\n",
-    "accuracy = accuracy_metric.result().numpy()\n",
-    "print(\"Accuracy:\", accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.98507464\n"
-     ]
-    }
-   ],
-   "source": [
-    "#necklace\n",
-    "accuracy_metric = tf.keras.metrics.Accuracy()\n",
-    "accuracy_metric.update_state(Y_test[188:188+67],predictions[188:188+67])\n",
-    "accuracy = accuracy_metric.result().numpy()\n",
-    "print(\"Accuracy:\", accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 1.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "#ring\n",
-    "accuracy_metric = tf.keras.metrics.Accuracy()\n",
-    "accuracy_metric.update_state(Y_test[188+67:188+67+53],predictions[188+67:188+67+53])\n",
-    "accuracy = accuracy_metric.result().numpy()\n",
-    "print(\"Accuracy:\", accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 187,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 2, 2, 2, 2, 2, 2, 2, 2, 0, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 3], dtype=int64)"
-      ]
-     },
-     "execution_count": 187,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions[188+67:188+67+53]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.9878049\n"
-     ]
-    }
-   ],
-   "source": [
-    "#watch\n",
-    "accuracy_metric = tf.keras.metrics.Accuracy()\n",
-    "accuracy_metric.update_state(Y_test[188+67+39:],predictions[188+67+39:])\n",
-    "accuracy = accuracy_metric.result().numpy()\n",
-    "print(\"Accuracy:\", accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 189,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
-       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
-       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
-       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
-       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3,\n",
-       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 2, 3, 3, 3, 3, 3, 3,\n",
-       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 2, 3, 3, 3, 3, 3,\n",
-       "       3, 3, 3, 3, 3, 3, 3, 3, 3, 3], dtype=int64)"
-      ]
-     },
-     "execution_count": 189,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions[188+67+39:]"
+    "# Get the class indices to labels mapping\n",
+    "class_labels = list(test_set.class_indices.keys())\n",
+    "\n",
+    "# Print classification report\n",
+    "report = classification_report(test_labels, predicted_classes, target_names=class_labels)\n",
+    "print(report)"
    ]
   },
   {
@@ -558,6 +386,13 @@
    "source": [
     "# model.save(\"JewelleryModelV1.keras\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
