--- a/JewelleryClassification/TrainMaterialModel.ipynb
+++ b/JewelleryClassification/TrainMaterialModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,9 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator , load_img\n",
     "from tensorflow.keras.utils import img_to_array\n",
-    "import os\n"
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "import os\n",
+    "import glob"
    ]
   },
   {
@@ -150,7 +152,7 @@
     "images = []\n",
     "labels = []\n",
     "\n",
-    "for filename in os.listdir(\"Train/gold\"):\n",
+    "for filename in os.listdir(\"Train/Material/gold\"):\n",
     "    if filename.endswith('.jpg') or filename.endswith(\"png\") or filename.endswith(\"jpeg\"):\n",
     "        # load and preprocess the image\n",
     "        img = tf.keras.preprocessing.image.load_img(os.path.join(\"Train/gold\", filename), target_size=target_size)\n",
@@ -160,7 +162,7 @@
     "       # add the preprocessed image to the list of images\n",
     "        images.append(img_array)\n",
     "        labels.append(0)\n",
-    "for filename in os.listdir(\"Train/silver\"):\n",
+    "for filename in os.listdir(\"Train/Material/silver\"):\n",
     "    if filename.endswith('.jpg') or filename.endswith(\"png\") or filename.endswith(\"jpeg\"):\n",
     "        # load and preprocess the image\n",
     "        img = tf.keras.preprocessing.image.load_img(os.path.join(\"Train/silver\", filename), target_size=target_size)\n",
@@ -170,7 +172,7 @@
     "       # add the preprocessed image to the list of images\n",
     "        images.append(img_array)\n",
     "        labels.append(1)\n",
-    "for filename in os.listdir(\"Train/bronze\"):\n",
+    "for filename in os.listdir(\"Train/Material/bronze\"):\n",
     "    if filename.endswith('.jpg') or filename.endswith(\"png\") or filename.endswith(\"jpeg\"):\n",
     "        # load and preprocess the image\n",
     "        img = tf.keras.preprocessing.image.load_img(os.path.join(\"Train/bronze\", filename), target_size=target_size)\n",
@@ -265,7 +267,7 @@
     "images = []\n",
     "labels = []\n",
     "\n",
-    "for filename in os.listdir(\"Test/gold\"):\n",
+    "for filename in os.listdir(\"Test/Material/gold\"):\n",
     "    if filename.endswith('.jpg') or filename.endswith(\"png\") or filename.endswith(\"jpeg\"):\n",
     "        # load and preprocess the image\n",
     "        img = tf.keras.preprocessing.image.load_img(os.path.join(\"Test/gold\", filename), target_size=target_size)\n",
@@ -275,7 +277,7 @@
     "       # add the preprocessed image to the list of images\n",
     "        images.append(img_array)\n",
     "        labels.append(0)\n",
-    "for filename in os.listdir(\"Test/silver\"):\n",
+    "for filename in os.listdir(\"Test/Material/silver\"):\n",
     "    if filename.endswith('.jpg') or filename.endswith(\"png\") or filename.endswith(\"jpeg\"):\n",
     "        # load and preprocess the image\n",
     "        img = tf.keras.preprocessing.image.load_img(os.path.join(\"Test/silver\", filename), target_size=target_size)\n",
@@ -285,7 +287,7 @@
     "       # add the preprocessed image to the list of images\n",
     "        images.append(img_array)\n",
     "        labels.append(1)\n",
-    "for filename in os.listdir(\"Test/bronze\"):\n",
+    "for filename in os.listdir(\"Test/Material/bronze\"):\n",
     "    if filename.endswith('.jpg') or filename.endswith(\"png\") or filename.endswith(\"jpeg\"):\n",
     "        # load and preprocess the image\n",
     "        img = tf.keras.preprocessing.image.load_img(os.path.join(\"Test/bronze\", filename), target_size=target_size)\n",
@@ -303,211 +305,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(79,)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Y_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 879ms/step\n"
-     ]
-    }
-   ],
-   "source": [
-    "predictions_array = model.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions = np.argmax(predictions_array,axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(79,)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.9493671\n"
-     ]
-    }
-   ],
-   "source": [
-    "accuracy_metric = tf.keras.metrics.Accuracy()\n",
-    "accuracy_metric.update_state(Y_test,predictions)\n",
-    "accuracy = accuracy_metric.result().numpy()\n",
-    "print(\"Accuracy:\", accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.98245615\n"
-     ]
-    }
-   ],
-   "source": [
-    "#gold\n",
-    "accuracy_metric = tf.keras.metrics.Accuracy()\n",
-    "accuracy_metric.update_state(Y_test[:57],predictions[:57])\n",
-    "accuracy = accuracy_metric.result().numpy()\n",
-    "print(\"Accuracy:\", accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions[40]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.9285714\n"
-     ]
-    }
-   ],
-   "source": [
-    "#silver\n",
-    "accuracy_metric = tf.keras.metrics.Accuracy()\n",
-    "accuracy_metric.update_state(Y_test[57:57+14],predictions[57:57+14])\n",
-    "accuracy = accuracy_metric.result().numpy()\n",
-    "print(\"Accuracy:\", accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.75\n"
-     ]
-    }
-   ],
-   "source": [
-    "#bronze\n",
-    "accuracy_metric = tf.keras.metrics.Accuracy()\n",
-    "accuracy_metric.update_state(Y_test[57+14:57+14+8],predictions[57+14:57+14+8])\n",
-    "accuracy = accuracy_metric.result().numpy()\n",
-    "print(\"Accuracy:\", accuracy)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 2, 2, 0, 2, 2, 2, 2], dtype=int64)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions[57+14:57+14+8]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.save(\"MaterialModelV2.keras\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1], dtype=int64)"
+       "['Test/Material\\\\bronze', 'Test/Material\\\\gold', 'Test/Material\\\\silver']"
       ]
      },
      "execution_count": 28,
@@ -516,7 +320,101 @@
     }
    ],
    "source": [
-    "predictions[57:57+14]"
+    "test_Path = \"Test/Material\"\n",
+    "IMAGE_SIZE = (224,224)\n",
+    "folders = glob.glob(train_Path + '/*')\n",
+    "folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = [\"bronze\",\"gold\",\"silver\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 76 images belonging to 3 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_datagen = ImageDataGenerator(rescale=1./255)\n",
+    "test_Path = \"Test/Material\"\n",
+    "test_set = test_datagen.flow_from_directory(\n",
+    "    test_Path,  # Use your test data directory here\n",
+    "    target_size=IMAGE_SIZE,\n",
+    "    batch_size=32,\n",
+    "    class_mode='categorical',\n",
+    "    shuffle= False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ghass\\anaconda3\\envs\\yolo\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:396: UserWarning: Skipping variable loading for optimizer 'adam', because it has 326 variables whereas the saved optimizer has 14 variables. \n",
+      "  trackable.load_own_variables(weights_store.get(inner_path))\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = tf.keras.models.load_model(\"MaterialModelV2.keras\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 302ms/step\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      bronze       1.00      0.95      0.97        57\n",
+      "        gold       0.87      1.00      0.93        13\n",
+      "      silver       0.86      1.00      0.92         6\n",
+      "\n",
+      "    accuracy                           0.96        76\n",
+      "   macro avg       0.91      0.98      0.94        76\n",
+      "weighted avg       0.97      0.96      0.96        76\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_labels = test_set.classes\n",
+    "# Change the list because the order of the training is different from the order of testing\n",
+    "test_labels1 = [2 if x == 0 else 0 if x == 1 else 1 for x in test_labels]\n",
+    "# Predict the labels for the test set\n",
+    "predictions = model.predict(test_set, steps=len(test_set))\n",
+    "predicted_classes = np.argmax(predictions, axis=1)\n",
+    "\n",
+    "# Get the class indices to labels mapping\n",
+    "class_labels = list(test_set.class_indices.keys())\n",
+    "\n",
+    "# Print classification report\n",
+    "report = classification_report(test_labels1, predicted_classes, target_names=class_labels)\n",
+    "print(report)"
    ]
   },
   {
