--- a/LaptopPrice/laptop-price-prediction.ipynb
+++ b/LaptopPrice/laptop-price-prediction.ipynb
@@ -2013,6 +2013,7 @@
     }
    ],
    "source": [
+    "#In indian Rupee\n",
     "print(f'RMSE: {np.sqrt(mean_squared_error(y_test, final_predictions))}')\n",
     "print(f'R-square: {r2_score(y_test, final_predictions)}')"
    ]
